# Aegiscore-Main

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  package-lock.json  package.json  pyrightconfig.json
ai/: .env.example  README.md  pyproject.toml
ai/datasets/: alerts_dataset.csv  alerts_dataset.csv.bak  generate_alerts_dataset.py  generate_alerts_dataset.py.bak  risk_training_fixture.csv  sample_alert_row.json  sample_features.json
ai/inference/: predict_risk.py
ai/models/: README.md  aegiscore-risk-priority-model.joblib  aegiscore-risk-priority-model.keras  aegiscore-risk-priority-model.metadata.json  alert_prioritization_classification_report.txt  alert_prioritization_confusion_matrix.csv  alert_prioritization_evaluation_metrics.json
ai/models/legacy/: README.md
ai/src/aegiscore_ai/: __init__.py  risk_baseline.py
ai/training/: train_risk_model.py  train_risk_model.py.bak
apps/api/: .env.example  alembic.ini  pyproject.toml
apps/api/aegiscore_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_workflow_actions_and_notes.py  0003_incident_alert_refactor.py  0004_risk_scoring_runtime.py  0005_response_policies_and_execution_fields.py  0006_ingestion_pipeline_hardening.py  0007_wazuh_live_connector_state.py  0008_notification_events.py  0009_containment_flags.py  0010_scoremethod_tensorflow.py  0011_user_totp_mfa.py  0012_notification_read_state.py
apps/api/app/: main.py
apps/api/app/api/: deps.py  router.py
apps/api/app/core/: config.py  (+1 more)
apps/api/tests/: test_ai_ml_readiness.py  test_alerts_dataset.py  test_alerts_route.py  test_auth_route.py  test_auth_service.py  test_dashboard_detection_counts.py  test_detail_serializers.py  test_health_route.py  test_health_service.py  test_incidents_route.py  test_ingestion_route.py  test_ingestion_service.py  test_list_routes.py  test_notifications_route.py  test_notifications_service.py  test_policies_route.py  test_reports_route.py  test_reports_service.py  test_response_adapters.py  test_response_automation.py  test_scoring_baseline.py  test_scoring_integration_service.py  test_scoring_ml.py  test_scoring_service.py  test_security.py  test_serializers.py  test_suricata_connector.py  test_users_service.py  test_wazuh_connector.py  test_workflows.py
apps/worker/: .env.example  pyproject.toml
apps/worker/app/: main.py
(+273 files in other folders)
