[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegiscore-ai"
version = "0.1.0"
description = "AegisCore AI utilities"
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.3.1,<3.0.0",
  "pandas>=2.3.1,<3.0.0",
  "scikit-learn>=1.7.0,<2.0.0",
  "joblib>=1.4.2,<2.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]
