[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegiscore-ai"
version = "0.1.0"
description = "AegisCore AI utilities"
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.26.0,<2.2.0",
  "pandas>=2.2.0,<3.0.0",
  "tensorflow-cpu>=2.17.0,<2.20.0"
]

[tool.setuptools.packages.find]
where = ["src"]
