[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegiscore-api"
version = "0.1.0"
description = "AegisCore FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0,<0.117.0",
  "uvicorn[standard]>=0.35.0,<0.36.0",
  "sqlalchemy>=2.0.41,<3.0.0",
  "alembic>=1.16.0,<2.0.0",
  "psycopg[binary]>=3.2.9,<4.0.0",
  "PyJWT>=2.10.1,<3.0.0",
  "passlib>=1.7.4,<2.0.0",
  "pydantic>=2.11.7,<3.0.0",
  "pydantic-settings>=2.10.1,<3.0.0",
  "numpy>=2.3.1,<3.0.0",
  "pandas>=2.3.1,<3.0.0",
  "scikit-learn>=1.7.0,<2.0.0",
  "joblib>=1.4.2,<2.0.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1,<0.29.0",
  "pytest>=8.4.1,<9.0.0",
  "ruff>=0.12.4,<0.13.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
