[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegiscore-worker"
version = "0.1.0"
description = "AegisCore background worker"
requires-python = ">=3.12"
dependencies = [
  "sqlalchemy>=2.0.41,<3.0.0",
  "psycopg[binary]>=3.2.9,<4.0.0",
  "pydantic>=2.11.7,<3.0.0",
  "pydantic-settings>=2.10.1,<3.0.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.12.4,<0.13.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

